@@ -1,3 +1,7 @@
+2013-06-07 Borut Razem <borut.razem AT gmail.com.net>
+
+	* snap.php: Microsoft Windows - x86_64 is officialy supported platform
+
 2013-06-02 Borut Razem <borut.razem AT gmail.com.net>
 
 	* index.php: Microsoft Windows - x86_64 is officialy supported platform
